cabal-version: 2.4

name: vpngate-api
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base ^>=4.12.0.0
                 , cassava
                 , bytestring
                 , text
    default-language: Haskell2010
    default-extensions: DeriveGeneric
                      , TypeApplications

-- library
--     import: commons
--     exposed-modules: MyLib
--     hs-source-dirs: src

executable vpngate-api
    import: commons
--     build-depends: vpngate-api
    main-is: Main.hs
