cabal-version: 2.4

name: vpngate-api
version: 0.1.0.0
license: ISC
author: Ignat Insarov
maintainer: kindaro@gmail.com

common commons
    build-depends: base ^>=4.12.0.0
                 , cassava
                 , bytestring
                 , text
                 , base64-bytestring
                 , path ^>=0.6
                 , path-io
                 , vector
                 , from-sum
                 , ip
                 , typed-process
                 , aeson
                 , json-alt
                 , transformers
                 , mtl
                 , pretty-show
    default-language: Haskell2010
    default-extensions: DeriveGeneric
                      , TypeApplications
                      , OverloadedStrings
                      , RecordWildCards
                      , ExistentialQuantification
                      , StandaloneDeriving

library
    import: commons
    exposed-modules: VpnGate
                   , Iperf
                   , JsonIperf
                   , OpenVpn
                   , Types
    hs-source-dirs: lib

executable vpngate-api
    import: commons
    build-depends: vpngate-api
    hs-source-dirs: exe
    main-is: Main.hs
